# streamSerialization

./: CMakeLists.txt  README.md  example.c  serialize.c  test.cpp
src/: serializer.c  serializer.h
testing/: CMakeLists.txt  test.cpp
